--- a/assets/css/vno.css
+++ b/assets/css/vno.css
@@ -7992,7 +7992,7 @@ hr {
   width: 100%;
   max-width: none;
   height: 100%;
-  background: url(/img/bg.jpg);
+  background: url(/wed/img/bg.jpg);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
